test/visibility/import/edgeCases/multipleDef3.good
multipleDef3.chpl:2: error: symbol x is multiply defined
note: 'x' was reexported at multipleDef3.chpl:8
multipleDef3.chpl:5: note: symbol 'x', defined here, was reexported at multipleDef3.chpl:9
multipleDef3.chpl:5: note: also defined here
